[gd_scene load_steps=2 format=3 uid="uid://brujykyudr4p3"]

[ext_resource type="Script" path="res://menu.gd" id="1_p2mde"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p2mde")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 103.0
offset_bottom = 54.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="singleplayer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SinglePlayer
"
vertical_icon_alignment = 2

[node name="local multiplayer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "local multiplayer
"
vertical_icon_alignment = 2

[node name="Ranked" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ranked"
vertical_icon_alignment = 2

[node name="Leave Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Leave Game"
vertical_icon_alignment = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/local multiplayer" to="." method="_on_local_multiplayer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Ranked" to="." method="_on_ranked_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Leave Game" to="." method="_on_leave_game_pressed"]
